# tkeasygui-python

./: LICENSE  Makefile  README-ja.md  README-ko.md  README-zh.md  README.md  Taskfile.yml  a.py  check.sh  element2json.py  justfile  makedoc.py  makedoc.sh  mypy.ini  package.sh  pyproject.toml  requirements.txt  setup.py  test_simple.py  update_version.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_ja.md  config.yml  feature_request.md
.github/workflows/: test.yml
TkEasyGUI/: __init__.py  custom_frame_scrollable.py  dialogs.py  icon.py  icon_default.py  locale_easy.py  utils.py  version.py  widgets.py  widgets_framescrollable.py  widgets_image.py  widgets_window.py
docs/: README.md  custom_events.md  dev.md  elements.json  format_docs.py  installation_trouble.md  theme.md
docs/TkEasyGUI/: README.md  dialogs-py.md  index.md  locale_easy-py.md  utils-py.md  version-py.md  widgets-py.md  widgets_image-py.md  widgets_window-py.md
docs/scripts/: elements.json  format_docs.py  readme_maker.py  readme_mekar.py
docs/scripts/icon/: make_icon.py
docs/scripts/template/: README.md
docs/template/: README.md
docs/tkeasygui/: dialogs-py.md  index.md  widgets-py.md
pytest_tests/: dialogs_test.py  locale_easy_test.py  utils_test.py  widgets_test.py  widgets_window_test.py
tests/: README.md  calc.py  calc2.py  canvas_test.py  clock.py  clock_post_event_after.py  column_test.py  combo_readonly_test.py  contextmenu_test.py  element_justification_test.py  event_hooks.py  event_loop_test.py  file_viewer.py  filebrowse_test.py  fontlist.py  framescrollable.py  graph_image.py  image_screenshot.py  image_size_test.py  image_test.py  keep_on_top.py  layout_test.py  lifegame.py  listbrowse_test.py  localize_test.py  login_password.py  many_buttons.py  many_change_test.py  menu_test.py  nokey.py  notepad.py  opencv_camera.py  paint_compatible.py  paint_eg.py  popup_get_form_easy.py  popup_get_form_test.py  popup_input.py  popup_test.py  push_test.py  radio_n_checkbox.py  (+14 more)
tests/basic_app/: CRUD.py  cells.py  circle_drawer.py  counter.py  crud_test.py  flight_booker.py  temperature_converter.py  timer.py
tests/browse/: calendar_browse.py  file_browse.py
tests/input/: input_cursor.py  input_test.py  input_validation.py  input_width.py
tests/listbox/: list_test.py
tests/multiline/: multiline_cursor.py  multiline_right.py  multiline_test.py
tests/popup/: ask_name.py  buttons.py  get_file_n_dir.py  hello_popup.py  input_text.py  popup_get_file.py  popup_get_file_sp_file_types.py  popup_icon_test.py  popup_input.py  popup_input_validation.py  popup_memo_text.py  popup_ok_cancel_test.py  popup_yes_no_test.py  select_multiple_files.py
tests/progressbar/: progressbar_indeterminate.py  progressbar_n_slider.py  progressbar_test.py
tests/table/: fruits.csv  many_cols_table.py  table_test.py
tests/text/: clock.py  color.py  simple_text.py  text_click_test.py  text_clock.py  text_color_change_test.py
tests/theme/: ttk_button.py
tests/utils/: popup_screenshot_samples.py
tkeasygui/: __init__.py  dialogs.py  tkeasygui_version.py  version.py  widgets.py
