[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TkEasyGUI"
version = "1.0.37"
dependencies = [
  "Pillow>=11.2.1",
  "pyperclip",
]
requires-python = ">=3.9"
authors = [
  { name="kujirahand", email="web@kujirahand.com" },
]
maintainers = [
 { name="kujirahand", email="web@kujirahand.com" },
]
description = "TkEasyGUI is simple GUI Library for Python3 with Tkinter"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["GUI", "tkinter", "TkEasyGUI"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/kujirahand/tkeasygui-python"
Documentation = "https://github.com/kujirahand/tkeasygui-python/blob/main/README.md"
Repository = "https://github.com/kujirahand/tkeasygui-python/"
Issues = "https://github.com/kujirahand/tkeasygui-python/issues"
Changelog = "https://github.com/kujirahand/tkeasygui-python/releases"

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["E501", "D415", "D203", "D212", "D400", "D401"]
